--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-auto": "^1.0.0-next.91",
+		"@sveltejs/kit": "^1.0.0-next.589",
 		"@types/nodemailer": "^6.4.6",
 		"@types/sjcl": "^1.0.30",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
