Changed to relative paths.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
 	"compilerOptions": {
 		"paths": {
 			"$lib": [
-				"src/lib"
+				"./src/lib"
 			],
 			"$lib/*": [
-				"src/lib/*"
+				"./src/lib/*"
 			],
 		},
 		"allowJs": true,
